src/snapshots/aidl_parser__rules__tests__aidl.snap
---
source: src/rules.rs
expression: res

---
Some(Aidl(
  package: Package(
    name: "x.y.z",
    symbol_range: "...",
    full_range: "...",
  ),
  imports: [
    Import(
      path: "a.b",
      name: "c",
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  item: Interface(Interface(
    oneway: false,
    name: "MyInterface",
    elements: [],
    full_range: "...",
    symbol_range: "...",
  )),
))
