src/snapshots/aidl_parser__rules__tests__annotation2.snap
---
source: src/rules.rs
expression: res

---
Some(Annotation(
  name: "@AnnotationName",
  key_values: {},
))
