src/snapshots/aidl_parser__rules__tests__const_num.snap
---
source: src/rules.rs
assertion_line: 519
expression: res

---
Const(
  name: "CONST_NAME",
  type: Type(
    name: "int",
    kind: primitive,
    symbol_range: "...",
    full_range: "...",
  ),
  value: "123",
  symbol_range: "...",
  full_range: "...",
)
