src/snapshots/aidl_parser__rules__tests__const_with_annotation.snap
---
source: src/rules.rs
assertion_line: 546
expression: res

---
Const(
  name: "CONST_NAME",
  type: Type(
    name: "TypeName",
    kind: unresolved,
    symbol_range: "...",
    full_range: "...",
  ),
  value: "123",
  annotations: [
    Annotation(
      name: "@AnnotationName",
    ),
  ],
  symbol_range: "...",
  full_range: "...",
)
