src/snapshots/aidl_parser__rules__tests__const_with_javadoc.snap
---
source: src/rules.rs
expression: res

---
Const(
  name: "CONST_NAME",
  const_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  value: "123",
  annotations: [],
  doc: Some("Const documentation"),
  symbol_range: "...",
  full_range: "...",
)
