src/snapshots/aidl_parser__rules__tests__declared_parcelable-3.snap
---
source: src/rules.rs
assertion_line: 140
expression: res

---
Import(
  path: "any.pkg",
  name: "Y",
  symbol_range: "...",
  full_range: "...",
)
