src/snapshots/aidl_parser__rules__tests__declared_parcelable.snap
---
source: src/rules.rs
assertion_line: 128
expression: res

---
Import(
  path: "",
  name: "X",
  symbol_range: "...",
  full_range: "...",
)
